--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a href="#contact">Contact</a></li>
 
     
-        <h1>PIPELINE CI/CD</h1>
+        <h1>SERGE</h1>
           
         </div>
       </nav>
