--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html lang="france>
 
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Portfolio d'Ysma, développeur web. Création de sites web responsives, applications interactives et solutions digitales sur mesure." />
+    <meta name="author" content="Ysmaël RAKOTONINDRAINY-FELIX" />
+    <meta name="copyright" content="Ysmaël RAKOTONINDRAINY-FELIX" />
+    <meta name="robots" content="index, follow" />
+
+    <title>YSMA-RKTF_7 : Développeur Web</title>
+
+    <link rel="shortcut icon" href="image/LogoRKTF.png" type="image/x-icon" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="style.css"/>
+</head>
 
   <body>
     <!--Animation pour le fond de la page-->
